--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -36,6 +36,12 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     user-select: none;
+    /* outline: 1px solid red; */
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
